--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -26,7 +26,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
             android:layout_marginTop="45dp"
-            android:text="@string/teamIntroduce" />
+            android:text="@string/teamIntroduce"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
         <View
             android:layout_width="match_parent"
@@ -41,7 +43,8 @@
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:src="@drawable/dd" />
+            android:src="@drawable/dd"
+            android:importantForAccessibility="no" />
 
 
         <TextView
@@ -52,16 +55,19 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="40dp"
             android:ellipsize="end"
-            android:maxLines="2"
-            android:text="@string/teamText" />
+            android:maxLines="6"
+            android:text="@string/teamText"
+            android:textSize="14.5sp"/>
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
-            android:layout_marginTop="80dp"
-            android:text="@string/projectIntroduce" />
+            android:layout_marginTop="50dp"
+            android:text="@string/projectIntroduce"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
         <View
             android:layout_width="match_parent"
@@ -80,10 +86,7 @@
             android:maxLines="4"
             android:text="@string/projectText"
             android:textSize="14.5sp"
-
-
             />
-
 
     </LinearLayout>
 
