--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,11 +7,10 @@
     android:background="#E6474747"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-    <ImageButton
-        android:id="@+id/backBtn"
+    <ImageView
+        android:id="@+id/returnBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@android:drawable/ic_menu_revert"
-        android:background="parent"
         android:contentDescription="@string/back_button" />
 </androidx.appcompat.widget.Toolbar>
