--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -9,7 +9,7 @@
 
     <include
         layout = "@layout/toolbar"
-        android:id = "@+id/toolbar"/>
+        android:id = "@+id/team_toolbar"/>
 
 
     <LinearLayout
@@ -18,7 +18,7 @@
         android:layout_marginTop="35dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/team_toolbar"
         tools:layout_editor_absoluteX="0dp">
 
         <TextView
@@ -83,7 +83,6 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="40dp"
             android:ellipsize="end"
-            android:maxLines="4"
             android:text="@string/projectText"
             android:textSize="14.5sp"
             />
