--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -6,31 +6,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:layout_margin="20dp"
-    tools:context=".PersonalIntroduceActivity">
+    tools:context=".PersonalActivity">
 
     <include
         layout = "@layout/toolbar"
-        android:id = "@+id/toolbar"/>
+        android:id = "@+id/personal_toolbar"/>
 
     <ImageView
         android:id="@+id/iv_personal"
         android:layout_width="190dp"
         android:layout_height="230dp"
+        android:layout_marginStart="20dp"
         android:src="@drawable/people"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/personal_toolbar" />
 
     <TextView
         android:id="@+id/personalNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:text="이름"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/iv_personal"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/personal_toolbar"/>
 
     <TextView
         android:id="@+id/personalNameText"
@@ -67,7 +68,7 @@
         app:layout_constraintTop_toTopOf="@+id/birthdayTitle" />
 
     <TextView
-        android:id="@+id/personalMbtiTitle"
+        android:id="@+id/mbtiTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -87,10 +88,10 @@
         android:text="INFJ"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/iv_personal"
-        app:layout_constraintTop_toTopOf="@+id/personalMbtiTitle" />
+        app:layout_constraintTop_toTopOf="@+id/mbtiTitle" />
 
     <TextView
-        android:id="@+id/personalHobbyTitle"
+        android:id="@+id/hobbyTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -111,7 +112,31 @@
         android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintStart_toEndOf="@+id/iv_personal"
-        app:layout_constraintTop_toTopOf="@+id/personalHobbyTitle" />
+        app:layout_constraintTop_toTopOf="@+id/hobbyTitle" />
+
+    <TextView
+        android:id="@+id/roleTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:text="역할"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/iv_personal"
+        app:layout_constraintTop_toTopOf="@+id/hobbyText" />
+
+    <TextView
+        android:id="@+id/roleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="잠자기"
+        android:textSize="14sp"
+        android:textStyle="normal"
+        app:layout_constraintStart_toEndOf="@+id/iv_personal"
+        app:layout_constraintTop_toTopOf="@+id/roleTitle" />
 
 
 
@@ -119,17 +144,18 @@
         android:id="@+id/momentTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:text="@string/moment"
+        android:layout_marginStart="20dp"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/iv_personal"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:layout_width="140dp"
         android:layout_height="3dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:background="@color/grey"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,6 +166,8 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="안드로이드 앱 개발을 하기위해 지원했습니다 반갑습니다. 감사합니다 사랑합니다. 잘봐주세요. 앞으로 열심히 하겠습니다. 사실 뭐가 뭔지 모르겠습니다. 살려주세요."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,6 +178,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:text="@string/myGoal"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -160,6 +189,7 @@
         android:layout_width="140dp"
         android:layout_height="3dp"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
         android:background="@color/grey"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goalTitle" />
@@ -169,6 +199,8 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="안드로이드 앱 개발을 하기위해 지원했습니다 반갑습니다. 감사합니다 사랑합니다. 잘봐주세요. 앞으로 열심히 하겠습니다. 사실 뭐가 뭔지 모르겠습니다. 살려주세요."
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goalTitle"/>
@@ -178,6 +210,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:text="@string/myResolve"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -189,6 +222,7 @@
         android:layout_height="3dp"
         android:background="@color/grey"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resolveTitle"/>
 
@@ -197,6 +231,8 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="안드로이드 앱 개발을 하기위해 지원했습니다 반갑습니다. 감사합니다 사랑합니다. 잘봐주세요. 앞으로 열심히 하겠습니다. 사실 뭐가 뭔지 모르겠습니다. 살려주세요."
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resolveTitle"/>
