--- a/app/src/main/res/layout/activity_personal_introduce.xml
+++ b/app/src/main/res/layout/activity_personal_introduce.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:padding="20dp"
     tools:context=".PersonalIntroduceActivity">
 
     <include
@@ -14,6 +13,7 @@
         android:id = "@+id/personal_toolbar"/>
 
     <ImageView
+        android:layout_marginStart="20dp"
         android:id="@+id/iv_personal"
         android:layout_width="190dp"
         android:layout_height="230dp"
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:text="이름"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -116,6 +117,7 @@
 
 
     <TextView
+        android:layout_marginStart="20dp"
         android:id="@+id/momentTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -128,6 +130,7 @@
         />
 
     <View
+        android:layout_marginStart="20dp"
         android:layout_width="140dp"
         android:layout_height="3dp"
         android:layout_marginTop="10dp"
@@ -136,16 +139,18 @@
         app:layout_constraintTop_toBottomOf="@+id/momentTitle" />
 
     <TextView
+        android:layout_marginStart="20dp"
         android:id="@+id/momentText"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="20dp"
-        android:text="안드로이드 앱 개발을 하기위해 지원했습니다 반갑습니다. 감사합니다 사랑합니다. 잘봐주세요. 앞으로 열심히 하겠습니다. 사실 뭐가 뭔지 모르겠습니다. 살려주세요."
+        android:text="지원계기에요"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/momentTitle" />
 
     <TextView
+        android:layout_marginStart="20dp"
         android:id="@+id/goalTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -157,6 +162,7 @@
         app:layout_constraintTop_toBottomOf="@+id/momentText" />
 
     <View
+        android:layout_marginStart="20dp"
         android:layout_width="140dp"
         android:layout_height="3dp"
         android:layout_marginTop="10dp"
@@ -165,15 +171,17 @@
         app:layout_constraintTop_toBottomOf="@+id/goalTitle" />
 
     <TextView
+        android:layout_marginStart="20dp"
         android:id="@+id/goalText"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="20dp"
-        android:text="안드로이드 앱 개발을 하기위해 지원했습니다 반갑습니다. 감사합니다 사랑합니다. 잘봐주세요. 앞으로 열심히 하겠습니다. 사실 뭐가 뭔지 모르겠습니다. 살려주세요."
+        android:text="목표에요"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/goalTitle"/>
 
     <TextView
+        android:layout_marginStart="20dp"
         android:id="@+id/resolveTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -185,6 +193,7 @@
         app:layout_constraintTop_toBottomOf="@+id/goalText"/>
 
     <View
+        android:layout_marginStart="20dp"
         android:layout_width="140dp"
         android:layout_height="3dp"
         android:background="@color/grey"
@@ -193,11 +202,12 @@
         app:layout_constraintTop_toBottomOf="@+id/resolveTitle"/>
 
     <TextView
+        android:layout_marginStart="20dp"
         android:id="@+id/resolveText"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="20dp"
-        android:text="안드로이드 앱 개발을 하기위해 지원했습니다 반갑습니다. 감사합니다 사랑합니다. 잘봐주세요. 앞으로 열심히 하겠습니다. 사실 뭐가 뭔지 모르겠습니다. 살려주세요."
+        android:text="각오에요"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resolveTitle"/>
 
